apps/prod2/tibuild/v1/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tibuild
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: tibuild
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: tibuild
    spec:
      containers:
        - image: ghcr.io/pingcap-qe/ee-apps/tibuild:v2026.6.21-29-g7948db8
          imagePullPolicy: Always
          name: tibuild
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: "100m"
              memory: 128Mi
            limits:
              cpu: "1"
              memory: 1Gi
          livenessProbe:
            httpGet:
              path: /swagger/index.html
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 3
          volumeMounts:
            - name: config
              mountPath: "/app/configs"
              readOnly: true
      nodeSelector:
        kubernetes.io/arch: "amd64"
      volumes:
        - name: config
          secret:
            secretName: v1-config
      terminationGracePeriodSeconds: 30
