apps/prod2/tibuild/v1/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tibuild-v1
spec:
  parentRefs:
    - kind: Gateway
      name: internal-gateway
      namespace: infra
  hostnames:
    - tibuild.pingcap.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: tibuild
          port: 80
